--- a/page2.html
+++ b/page2.html
@@ -9,20 +9,20 @@
       <body>
         <!-- courtesy of http://tutorialzine.com/2013/10/12-awesome-css3-features-you-can-finally-use/-->
         <div class="container">
-	         <span data-title="Answer: 125216256">Input=1564</span>
-	          <span data-title="Answer: 206416">Input=2042</span>
-	           <span data-title="Answer: 949641">Input=9741</span>
-	            <span data-title="Answer: 7362716">Input=7632</span>
-                <span data-title="Answer: 0815122401">Input=0987</span>
+	         <span data-title="Answer: 24910">Input=41681100</span>
+	          <span data-title="Answer: 15612">Input=1253614</span>
+	           <span data-title="Answer: 67678">Input=3649364964</span>
+	            <span data-title="Answer: 24862">Input=41664364</span>
+                <span data-title="Answer: 98895">Input=8164648125</span>
                   </div>
                     <div style="text-align:center;">
-                      <p class = "questiontext"> Solve for input of 7676</p>
+                      <p class = "questiontext"> Solve for input of 49162536</p>
                         <input type="text" id="answerText" class="submissionfield"
                           placeholder="Answer" />
                             </div>
                               <div style="text-align:center;">
                                 <button type="button"
-                                  onclick="run();">
+                                  onclick="run2();">
                                     Run
                                     </button>
                                     </div>
