Got rid of button and fixed small errors

--- a/page2.html
+++ b/page2.html
@@ -9,23 +9,17 @@
       <body>
         <!-- courtesy of http://tutorialzine.com/2013/10/12-awesome-css3-features-you-can-finally-use/-->
         <div class="container">
-	         <span data-title="Answer: 24910">Input=41681100</span>
-	          <span data-title="Answer: 15612">Input=1253614</span>
-	           <span data-title="Answer: 67678">Input=3649364964</span>
-	            <span data-title="Answer: 24862">Input=41664364</span>
-                <span data-title="Answer: 98895">Input=8164648125</span>
+	         <span data-title="Answer: 213">Input=419</span>
+	          <span data-title="Answer: 555">Input=252525</span>
+	           <span data-title="Answer: 334">Input=9916</span>
+	            <span data-title="Answer: 566">Input=253636</span>
+                <span data-title="Answer: 123">Input=149</span>
                   </div>
                     <div style="text-align:center;">
                       <p class = "questiontext"> Solve for input of 49162536</p>
                         <input type="text" id="answerText" class="submissionfield"
-                          placeholder="Answer" />
+                          placeholder="Answer" onchange="run();"/>
                             </div>
-                              <div style="text-align:center;">
-                                <button type="button"
-                                  onclick="run2();">
-                                    Run
-                                    </button>
-                                    </div>
                                   <div style="text-align:center;" class="wrapper">
                                 <span class="square individual">
                               <a class="ninth before after" href="Page2.html">Click Here</a>
