--- a/index.html
+++ b/index.html
@@ -18,14 +18,8 @@
                     <div style="text-align:center;">
                       <p class = "questiontext"> Solve for input of 7676</p>
                         <input type="text" id="answerText" class="submissionfield"
-                          placeholder="Answer" />
+                          placeholder="Answer" onchange="run();" />
                             </div>
-                              <div style="text-align:center;">
-                                <button type="button"
-                                  onclick="run();">
-                                    Run
-                                    </button>
-                                    </div>
                                   <div style="text-align:center;" class="wrapper">
                                 <span class="square individual">
                               <a class="ninth before after" href="Page2.html">Click Here</a>
