Fixed link name from Page.html to page.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             </div>
                                   <div style="text-align:center;" class="wrapper">
                                 <span class="square individual">
-                              <a class="ninth before after" href="Page2.html">Click Here</a>
+                              <a class="ninth before after" href="page2.html">Click Here</a>
                             </span>
                           </div>
 
