--- a/page2.html
+++ b/page2.html
@@ -18,7 +18,7 @@
                     <div style="text-align:center;">
                       <p class = "questiontext"> Solve for input of 49162536</p>
                         <input type="text" id="answerText" class="submissionfield"
-                          placeholder="Answer" onchange="run();"/>
+                          placeholder="Answer" onchange="run2();"/>
                             </div>
                                   <div style="text-align:center;" class="wrapper">
                                 <span class="square individual">
