Fixed small error again

--- a/page2.html
+++ b/page2.html
@@ -17,7 +17,7 @@
                   </div>
                     <div style="text-align:center;">
                       <p class = "questiontext"> Solve for input of 49162536</p>
-                        <input type="text" id="answerText" class="submissionfield"
+                        <input type="text" id="answerText2" class="submissionfield"
                           placeholder="Answer" onchange="run2();"/>
                             </div>
                                   <div style="text-align:center;" class="wrapper">
