Added new page and formatted the HTML pages to look nicer

--- a/page3.html
+++ b/page3.html
@@ -10,20 +10,20 @@
       <body>
         <!-- courtesy of http://tutorialzine.com/2013/10/12-awesome-css3-features-you-can-finally-use/-->
       <div class="container">
-	       <span data-title="Answer: 213">Input=419</span>
-	        <span data-title="Answer: 555">Input=252525</span>
-	         <span data-title="Answer: 334">Input=9916</span>
-	          <span data-title="Answer: 566">Input=253636</span>
-              <span data-title="Answer: 123">Input=149</span>
-                </div>
-                  <div style="text-align:center;">
-                    <p class = "questiontext"> Solve for input of 49162536</p>
+	     <span data-title="Answer: 434281">Input=29249</span>
+         <span data-title="Answer: 64249336">Input=84796</span>
+	          <span data-title="Answer: 12439">Input=14293</span>
+	            <span data-title="Answer: 16216216">Input=44444</span>
+                <span data-title="Answer: 13129">Input=19143</span>
+                  </div>
+                    <div style="text-align:center;">
+                      <p class = "questiontext"> Solve for input of 99999</p>
                       <input type="text" id="answerText" class="submissionfield"
-                    placeholder="Answer" onchange="run2();"/>
+                    placeholder="Answer" onchange="run3();"/>
                   </div>
                 <div style="text-align:center;" class="wrapper">
               <span class="square individual">
-            <a class="ninth before after" href="page3.html">Click Here</a>
+            <a class="ninth before after" href="answer.html">Click Here</a>
           </span>
         </div>
     </body>
