--- a/page3.html
+++ b/page3.html
@@ -23,7 +23,7 @@
                   </div>
                 <div style="text-align:center;" class="wrapper">
               <span class="square individual">
-            <a class="ninth before after" href="answer.html">Get Results</a>
+            <a class="ninth before after" href="results.html">Get Results</a>
           </span>
         </div>
     </body>
