Completed results.html page with javascript for the page to work

--- a/results.html
+++ b/results.html
@@ -8,5 +8,19 @@
     <title>Intelligence Test</title>
   </head>
     <body>
+      <div class="resulttext">
+        Results:
+        <br>
+        <br>
+        Question 1: <p id=result1>/1
+        </p>
+        Question 2: <p id=result2>/1
+        </p>
+        Question 3: <p id=result3>/1
+        </p>
+        <br>
+        %<p id=total>correct
+        </p>
+      </div>
     </body>
 </html>
