--- a/results.html
+++ b/results.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="intelligence.js"></script>
     <title>Intelligence Test</title>
   </head>
-    <body>
+    <body onload="results();">
       <div class="resulttext">
         Results:
         <br>
