--- a/results.html
+++ b/results.html
@@ -12,14 +12,14 @@
         Results:
         <br>
         <br>
-        Question 1: <p id=result1>/1
+        Question 1: <p id=result1>
         </p>
-        Question 2: <p id=result2>/1
+        Question 2: <p id=result2>
         </p>
-        Question 3: <p id=result3>/1
+        Question 3: <p id=result3>
         </p>
         <br>
-        %<p id=total>correct
+        <p id=total>
         </p>
       </div>
     </body>
